# namako

./: .gitignore  Cargo.toml  README.md  rust-analyzer.toml
.github/: copilot-instructions.md
_AGENTS/: AGENT_GUIDE.md  IMPL_PLAN.md  SYSTEM.md  TESAKI_EXTRACTION_PLAN.md  TWO_REPOS_SYSTEM.md  TWO_REPOS_naia_namako_cw.md
_WORKSPACE/: CLAUDE.md  CONVERSION_PLAN.md  CURRENT_ANALYSIS.md  CURRENT_STATUS.md  DEV_EX.md  FAILURE_MODES.md  GOLD_PLAN.md  IMPL_PLAN.md  IMPL_PLAN_v3.md  IMPL_PLAN_v_1_9.md  NEXT_STEPS.md  OUTPUT.md  PATH_FORWARD.md  RUNBOOK.md  SYSTEM.md  TODO.md
_WORKSPACE/ARCHIVE/: DX_TEST_LOG.md  GOLD_PLAN.md  IMPLEMENTATION_COMPLETE_v2_0.md  OPTIMIZATION_ANALYSIS.md  PHASE_10_COMPLETE.md  RESEARCH_FINDINGS.md
benches/: Cargo.toml
benches/benches/: main.rs  parsing.rs
benches/src/: lib.rs
cli/: Cargo.toml
cli/src/: explain.rs  gate.rs  lint.rs  main.rs  review.rs  status.rs  stub.rs  update_cert.rs  verify.rs
codegen/: Cargo.toml  README.md
codegen/src/: attribute.rs  lib.rs  npap.rs  parameter.rs  world.rs
codegen/tests/: example.rs  two_worlds.rs
codegen/tests/features/: example.feature
engine/: Cargo.toml  README.md
engine/src/: cli.rs  codegen.rs  engine.rs  event.rs  feature.rs  future.rs  id_tags.rs  lib.rs  namako.rs  npap.rs  step.rs  tag.rs  tracing.rs  world.rs
engine/src/parser/: basic.rs  mod.rs
engine/src/runner/: basic.rs  mod.rs
engine/src/writer/: basic.rs  compat.rs  discard.rs  fail_on_skipped.rs  libtest.rs  mod.rs  normalize.rs  or.rs  out.rs  repeat.rs  summarize.rs  tee.rs
engine/tests/: cli.rs  fail_fast.rs  filter.rs  from_str_and_parameter.rs  libtest.rs  minimal_ctx.rs  output.rs  result.rs  test_utils.rs  tracing.rs
engine/tests/features/output/: scenario_outline.feature
engine/tests/features/tracing/: correct.stdout
engine/tests/libtest/: correct-report-time.stdout
scripts/: install-tesaki-dev-shim  tesaki
servling/src/: backend.rs  claude_agent.rs  cli_backend.rs  codex_agent.rs  coding_agent.rs  copilot_agent.rs  core.rs  factory.rs  lib.rs  mock_agent.rs  outcome.rs  runner.rs
src/: cli.rs  codegen.rs  engine.rs  feature.rs  lib.rs  npap.rs  step.rs  tag.rs  tracing.rs
src/parser/: basic.rs
src/runner/: mod.rs
src/writer/: basic.rs  mod.rs  normalize.rs  repeat.rs  tee.rs
tesaki/: Cargo.toml  README.md
tesaki/agent/: Cargo.toml
tesaki/agent/src/: agent_fallback.rs  base_runner.rs  chat_plan.rs  chat_planner.rs  claude_agent.rs  claude_code_agent.rs  codex_agent.rs  copilot_agent.rs  lib.rs  llm_backend.rs  mock_agent.rs  runner.rs  runner_test.rs  token_usage.rs
tesaki/prompts/: README.md
tesaki/prompts/components/: budgets_full_table.md.j2  budgets_table.md.j2  critical_constraints.md.j2  footer.md.j2  surfaces_table.md.j2
tesaki/prompts/mission/: MISSION.md.j2  POLICY.md.j2
tesaki/prompts/mission/briefs/: add_clarify_scenario.md.j2  assess_spec_coverage.md.j2  cleanup_after_success.md.j2  create_missing_bindings.md.j2  explain_state.md.j2  fix_regression.md.j2  implement_behavior.md.j2  normalize_identity_tags.md.j2  refactor_bindings.md.j2  refine_feature_intent.md.j2  strengthen_then.md.j2  summarize_and_close.md.j2  triage_failures.md.j2
tesaki/prompts/next_task/: artifacts.md.j2  base.md.j2  done.md.j2  fix_lint.md.j2  fix_run.md.j2  needs_approval.md.j2  run_gate.md.j2  unknown.md.j2
tesaki/src/: agent_fallback.rs  allowlist.rs  base_runner.rs  binding_extractor.rs  chat_plan.rs  chat_planner.rs  claude_code_agent.rs  claude_code_runner.rs  codex_agent.rs  codex_runner.rs  config.rs  copilot_agent.rs  diagnosis.rs  error_parser.rs  escalation.rs  gate.rs  issue_classifier.rs  lessons.rs  lib.rs  logging.rs  main.rs  mission.rs  mission_selector.rs  mission_type.rs  model_tier.rs  packet_parser.rs  plan_validator.rs  policy_violation.rs  prompts.rs  repl.rs  repo_state.rs  runner.rs  runner_test.rs  scenario_extractor.rs  session.rs  spec_quality.rs  stage.rs  stop_reason.rs  surface_policy.rs  token_usage.rs  (+1 more)
tests/: cli.rs  fail_fast.rs  filter.rs  from_str_and_parameter.rs  libtest.rs  minimal_ctx.rs  output.rs  result.rs  test_utils.rs  tracing.rs
tests/features/output/: .feature.colored.out  ambiguous_step.feature.basic.out  ambiguous_step.feature.colored.out  ambiguous_step.feature.debug.out  background_rule.feature.colored.out  background_rule.feature.debug.out  background_rule_background.feature.basic.out  background_rule_background.feature.colored.out  background_rule_background.feature.debug.out  background_rule_background_outline.feature.basic.out  background_rule_background_outline.feature.colored.out  background_rule_background_outline.feature.debug.out  background_rule_outline.feature.basic.out  background_rule_outline.feature.debug.out  background_scenario.feature.basic.out  background_scenario.feature.colored.out  background_scenario.feature.debug.out  background_scenario_outline.feature.basic.out  background_scenario_outline.feature.colored.out  background_scenario_outline.feature.debug.out  descriptions.feature.basic.out  descriptions.feature.colored.out  descriptions.feature.debug.out  feature_description_with_allowed_keywords.feature.debug.out  non_default_lang.feature.basic.out  non_default_lang.feature.colored.out  non_default_lang.feature.debug.out  parsing_failed.feature.basic.out  parsing_failed.feature.colored.out  rule.feature.basic.out  rule.feature.colored.out  rule.feature.debug.out  rule_background.feature.basic.out  rule_background.feature.debug.out  rule_background_outline.feature.colored.out  rule_background_outline.feature.debug.out  rule_outline.feature.basic.out  rule_outline.feature.colored.out  rule_outline.feature.debug.out  scenario.feature.basic.out  (+20 more)
tests/libtest/: correct.stdout
