[package]
name = "tesaki"
version = "0.1.0"
edition = "2021"
description = "Tesaki - AI-friendly task orchestrator for Namako spec-driven development"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tesaki"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOML configuration
toml = "0.8"

# Error handling
anyhow = "1.0"

# File system operations
chrono = { version = "0.4", features = ["serde"] }

# Hashing for mission IDs
blake3 = "1.5"

# Temporary files for planner input
tempfile = "3.15"

[dev-dependencies]
